<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="account_options">Account options</string>
    <string name="account_type_fanfou">Fanfou</string>
    <string name="account_type_mastodon">Mastodon</string>
    <string name="account_type_statusnet">StatusNet</string>
    <string name="account_type_twitter">Twitter</string>
    <string name="action_accept_friend_request">Accept</string>
    <string name="action_accept_permission_request">Accept</string>
    <string name="action_add">Add</string>
    <string name="action_add_content_warning">Add content warning</string>
    <string name="action_add_conversation_participant">Add member</string>
    <string name="action_add_filter_rule">Add rule</string>
    <string name="action_add_filters_subscription">Add subscription</string>
    <string name="action_add_gif">Add GIF</string>
    <string name="action_add_media">Add media</string>
    <string name="action_add_member">Add member</string>
    <string name="action_add_name_to_home_screen">Add <xliff:g example="Name" id="name">%1$s</xliff:g> to home screen</string>
    <string name="action_add_tab">Add tab</string>
    <string name="action_add_tab_to_home_screen">Add tab to home screen</string>
    <string name="action_add_to_filter">Add to filter</string>
    <string name="action_add_to_home_screen">Add to home screen</string>
    <string name="action_add_to_home_screen_more">Add to home screen…</string>
    <string name="action_add_to_list">Add to list</string>
    <string name="action_block">Block</string>
    <string name="action_buffer_disconnect">Disconnect from Buffer</string>
    <string name="action_buffer_settings">Settings</string>
    <string name="action_buffer_update_now">Publish now</string>
    <string name="action_cancel_retweet">Cancel retweet</string>
    <string name="action_center">Center</string>
    <string name="action_change_language">Change language</string>
    <string name="action_clear">Clear</string>
    <string name="action_clear_messages">Clear messages</string>
    <string name="action_clear_messages_and_delete_conversation">Clear and delete conversation</string>
    <string name="action_comment">Comment</string>
    <string name="action_compose">Compose</string>
    <string name="action_compose_message_convert_to_status">Convert to tweet</string>
    <string name="action_connect_to_buffer">Connect</string>
    <string name="action_conversation_info">Conversation info</string>
    <string name="action_create_conversation">Create conversation</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_messages">Delete messages</string>
    <string name="action_disable_promotions">Disable promotions</string>
    <string name="action_dont_restart">Don\'t restart</string>
    <string name="action_dont_terminate">Don\'t quit</string>
    <string name="action_edit">Edit</string>
    <string name="action_edit_conversation_avatar">Edit icon</string>
    <string name="action_edit_conversation_name">Edit name</string>
    <string name="action_edit_filter_rule">Edit rule</string>
    <string name="action_enable">Enable</string>
    <string name="action_enable_notifications">Enable notifications</string>
    <string name="action_enable_promotions">Enable promotions</string>
    <string name="action_enable_retweets">Enable retweets</string>
    <string name="action_export_to_muted_users">Export to muted users</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_filter_import_from_blocked_users">Import from blocked users</string>
    <string name="action_filter_import_from_muted_users">Import from muted users</string>
    <string name="action_filter_subscriptions_card_manage">Manage subscriptions</string>
    <string name="action_finish">Finish</string>
    <string name="action_follow">Follow</string>
    <string name="action_format_search_update_status">Tweet <xliff:g id="text">%1$s</xliff:g></string>
    <string name="action_import">Import</string>
    <string name="action_import_from">Import from…</string>
    <string name="action_invert_selection">Invert selection</string>
    <string name="action_later">Later</string>
    <string name="action_leave_conversation">Leave conversation</string>
    <string name="action_like">Like</string>
    <string name="action_location">Location</string>
    <string name="action_manage_in_buffer">Manage in Buffer</string>
    <string name="action_mark_as_read">Mark as read</string>
    <string name="action_mute">Mute</string>
    <string name="action_mute_notifications">Mute notifications</string>
    <string name="action_name_saved_at_time"><xliff:g id="action">%1$s</xliff:g>, saved at <xliff:g id="time">%2$s</xliff:g></string>
    <string name="action_next_step">Next</string>
    <string name="action_no_thanks">No, thanks</string>
    <string name="action_open_in_browser">Open in browser</string>
    <string name="action_pick_color">Pick color</string>
    <string name="action_purchase">Purchase</string>
    <string name="action_purchase_features_pack">Buy features pack</string>
    <string name="action_qr_code">QR code</string>
    <string name="action_quote">Quote</string>
    <string name="action_record_video">Record video</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_report_spam">Report spam</string>
    <string name="action_set_color">Set color</string>
    <string name="action_twitter_mute_user">Mute user</string>
    <string name="action_twitter_muted_users">Muted users</string>
    <string name="auto_refresh">Auto refresh</string>
    <string name="background">Background</string>
    <string name="combined_notifications">Combined notifications</string>
    <string name="combined_notifications_summary_off">Notifications will be displayed separately</string>
    <string name="combined_notifications_summary_on">Notifications will be grouped</string>
    <string name="compose_now">Compose Now</string>
    <string name="compose_now_action">Compose Now action</string>
    <string name="compose_now_summary">Replaces Google Now shortcut for Compose screen</string>
    <string name="content">Content</string>
    <string name="content_and_storage">Content &amp; Storage</string>
    <string name="dark_theme">Dark theme</string>
    <string name="display_sensitive_contents">Display sensitive contents</string>
    <string name="display_sensitive_contents_summary">Display sensitive contents without notice in timeline</string>
    <string name="general">General</string>
    <string name="home_refresh">Refresh in home timeline</string>
    <string name="import_export_settings">Import/Export settings</string>
    <string name="incoming_friendships">Pending follow requests</string>
    <string name="keyboard_shortcuts">Keyboard shortcuts</string>
    <string name="load_item_limit">Load item limit</string>
    <string name="load_item_limit_summary">Set items limit per load.</string>
    <string name="load_more_from_top_summary">Useful if you prefer to read from bottom to top</string>
    <string name="media">Media</string>
    <string name="media_uploader">Media uploader</string>
    <string name="mention_this_user">Mention this user</string>
    <string name="no_close_after_status_updated">Keep \"Compose\" open after tweet sent</string>
    <string name="no_close_after_status_updated_summary">A little gift for chatterbox</string>
    <string name="notifications">Notifications</string>
    <string name="open_twitter_links">Open Twitter links</string>
    <string name="open_with_account">Open with account</string>
    <string name="other_settings">Other settings</string>
    <string name="pebble_notifications">Pebble Notifications</string>
    <string name="pebble_notifications_summary">Send Notifications to your Pebble</string>
    <string name="phishing_link_warning">Phishing link warning</string>
    <string name="phishing_link_warning_summary">Warn you when are trying to open a possibly phishing link in a direct message.</string>
    <string name="preference_multitasking">Multitasking</string>
    <string name="preference_multitasking_summary">Open profile and media in new task</string>
    <string name="preference_randomize_account_name">Randomize account name</string>
    <string name="preference_randomize_account_name_summary">Disallow other apps to get your name by reading accounts, improves privacy.</string>
    <string name="preference_summary_chrome_custom_tab">Open links with in-app browser (Powered by Chrome)</string>
    <string name="preference_title_chrome_custom_tab">In-app browser</string>
    <string name="preload_wifi_only">Preload using Wi-Fi only</string>
    <string name="preview">Preview</string>
    <string name="quick_send">Hit \"Enter\" to Send</string>
    <string name="quick_send_summary">Send tweet when hit \"Enter\".</string>
    <string name="read_from_bottom">Read from bottom</string>
    <string name="refresh_after_status_updated">Refresh after tweet sent</string>
    <string name="refresh_after_status_updated_summary">Refresh timeline and mentions after sending a tweet.</string>
    <string name="refresh_interval">Refresh interval</string>
    <string name="refresh_on_start">Refresh on start</string>
    <string name="remember_position">Remember position</string>
    <string name="remember_position_summary">Remember list/tab position before closing Twittnuker</string>
    <string name="safety">Safety</string>
    <string name="saved_searches">Saved searches</string>
    <string name="send_direct_message">Send DM</string>
    <string name="streaming">Streaming</string>
    <string name="theme">Theme</string>
    <string name="theme_color">Theme color</string>
    <string name="timeline_sync_service">Timeline sync service</string>
    <string name="title_blocked_users">Blocked users</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_media_timeline">Media timeline</string>
    <string name="title_statuses">Tweets</string>
    <string name="title_user">User</string>
    <string name="translation_destination">Translation destination</string>
    <string name="trends_location">Trends location</string>
    <string name="trends_location_summary">Set location for local trends.</string>
    <string name="user_mentions">User mentions</string>
    <string name="stop_auto_refresh_when_battery_low_summary">Disables auto refresh on low battery</string>
    <string name="stream_enabled">Enable Streaming</string>
    <string name="stream_enabled_summary">Stream Timeline when connected to a WiFi network</string>
    <string name="stream_notification">Streaming Notification</string>
    <string name="stream_notification_summary">Shows a static notification when connected to the stream</string>
    <string name="stream_on_mobile">Mobile Streaming</string>
    <string name="stream_on_mobile_summary">Stream on mobile network. This is NOT recommended!</string>
    <string name="stream_autoscroll">Autoscroll</string>
    <string name="stream_autoscroll_summary">Always stay at the top of the timeline</string>
    <string name="refresh_before_streaming">Refresh before streaming</string>
    <string name="refresh_before_streaming_summary">Timeline and mentions will be refreshed before the streaming service starts</string>
    <string name="stream_notifications">Notifications</string>
    <string name="stream_notifications_summary">Push-like notifications while streaming</string>
    <string name="push_notifications">Push Notificatons</string>
    <string name="push_api_url">Push API URL</string>
    <string name="push_api_port">Push API Port</string>
    <string name="push_api_url_summary">The URL/IP to your backend server</string>
    <string name="push_api_port_summary">The port your backend server listens on</string>
    <string name="refresh_on_start_workaround">Use "Refresh before streaming" instead</string>
</resources>