<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:key="settings_content"
	android:title="@string/content_and_storage">

	<PreferenceCategory
		android:key="category_multimedia_contents"
		android:title="@string/multimedia_contents">
		<de.vanita5.twittnuker.preference.MediaUploaderPreference
            android:defaultValue=""
        	android:key="media_uploader"
        	android:summary="%s"
			android:title="@string/image_uploader"/>

		<de.vanita5.twittnuker.preference.ImagePreloadPreference
			android:key="image_preload_options"
			android:title="@string/image_preload_options"/>

		<CheckBoxPreference
			android:defaultValue="true"
			android:key="preload_wifi_only"
			android:title="@string/preload_wifi_only"/>
	</PreferenceCategory>
	<PreferenceCategory
		android:key="category_content"
		android:title="@string/content">

		<de.vanita5.twittnuker.preference.SeekBarDialogPreference
			android:defaultValue="100"
			android:key="load_item_limit"
			android:summary="@string/load_item_limit_summary"
			android:title="@string/load_item_limit"
			app:max="200"
            app:min="10"
            app:step="5"/>

        <de.vanita5.twittnuker.preference.TimelineSyncPreference
            android:enabled="false"
        	android:defaultValue=""
        	android:key="timeline_sync_service"
        	android:summary="%s"
        	android:title="@string/timeline_sync_service"/>

		<CheckBoxPreference
			android:defaultValue="true"
			android:key="remember_position"
			android:summary="@string/remember_position_summary"
			android:title="@string/remember_position"/>
        <CheckBoxPreference
            android:defaultValue="false"
        	android:key="read_from_bottom"
        	android:summary="@string/load_more_from_top_summary"
            android:title="@string/read_from_bottom"/>
        <de.vanita5.twittnuker.preference.AutoFixSwitchPreference
            android:defaultValue="false"
            android:key="sort_timeline_by_id"
            android:title="@string/sort_timeline_by_id"
            android:summary="@string/sort_timeline_by_id_summary"/>

		<de.vanita5.twittnuker.preference.TrendsLocationPreference
			android:key="trends_location"
			android:summary="@string/trends_location_summary"
			android:title="@string/trends_location"/>

        <de.vanita5.twittnuker.preference.TranslationDestinationPreference
            android:key="translation_destination"
            android:title="@string/translation_destination"/>


		<de.vanita5.twittnuker.preference.ComponentStatePreference
			android:name="de.vanita5.twittnuker.activity.TwitterLinkHandlerActivity"
			android:key="twitter_link_handler"
			android:title="@string/open_twitter_links"/>

		<Preference
			android:fragment="de.vanita5.twittnuker.fragment.KeyboardShortcutsFragment"
			android:title="@string/keyboard_shortcuts"/>
	</PreferenceCategory>
	<PreferenceCategory
		android:key="category_safety"
		android:title="@string/safety">
		<CheckBoxPreference
			android:defaultValue="true"
			android:key="phishing_link_warning"
			android:summary="@string/phishing_link_warning_summary"
			android:title="@string/phishing_link_warning"/>
		<CheckBoxPreference
			android:defaultValue="true"
			android:key="display_sensitive_contents"
			android:summary="@string/display_sensitive_contents_summary"
			android:title="@string/display_sensitive_contents"/>
	</PreferenceCategory>

</PreferenceScreen>