<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Twittnuker - Twitter client for Android
  ~
  ~ Copyright (C) 2013-2017 vanita5 <mail@vanit.as>
  ~
  ~ This program incorporates a modified version of Twidere.
  ~ Copyright (C) 2012-2017 Mariotaku Lee <mariotaku.lee@gmail.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@id/mention"
        android:icon="@drawable/ic_action_at"
        android:title="@string/mention_this_user"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/qr_code"
        android:icon="@drawable/ic_action_qr"
        android:title="@string/action_qr_code"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@id/send_direct_message"
        android:icon="@drawable/ic_action_message"
        android:title="@string/send_direct_message"
        android:visible="false"/>
    <item
        android:id="@id/add_to_list"
        android:icon="@drawable/ic_action_add_to_list"
        android:title="@string/action_add_to_list"/>
    <item
        android:id="@id/set_color"
        android:icon="@drawable/ic_action_color_palette"
        android:title="@string/action_set_color"/>
    <item
        android:id="@+id/incoming_friendships"
        android:icon="@drawable/ic_action_profile"
        android:title="@string/incoming_friendships"/>
    <item
        android:id="@+id/user_mentions"
        android:icon="@drawable/ic_action_at"
        android:title="@string/user_mentions"/>
    <item
        android:id="@+id/saved_searches"
        android:icon="@drawable/ic_action_search"
        android:title="@string/saved_searches"/>
    <item
        android:id="@+id/enable_notifications"
        android:checkable="true"
        android:checked="false"
        android:icon="@drawable/ic_action_notification"
        android:title="@string/action_enable_notifications"/>
    <item
        android:id="@id/enable_retweets"
        android:checkable="true"
        android:icon="@drawable/ic_action_retweet"
        android:title="@string/action_enable_retweets"/>
    <item
        android:id="@id/add_to_filter"
        android:checkable="true"
        android:icon="@drawable/ic_action_speaker_muted"
        android:title="@string/action_add_to_filter"/>
    <item
        android:id="@id/mute_user"
        android:checkable="true"
        android:icon="@drawable/ic_action_visibility_off"
        android:title="@string/action_twitter_mute_user"/>
    <item
        android:id="@id/block"
        android:icon="@drawable/ic_action_block"
        android:title="@string/action_block"/>
    <item
        android:id="@id/report_spam"
        android:icon="@drawable/ic_action_warning"
        android:title="@string/action_report_spam"/>
    <item
        android:id="@+id/muted_users"
        android:icon="@drawable/ic_action_visibility_off"
        android:title="@string/action_twitter_muted_users"/>
    <item
        android:id="@+id/blocked_users"
        android:icon="@drawable/ic_action_block"
        android:title="@string/title_blocked_users"/>
    <item
        android:id="@id/open_with_account"
        android:icon="@drawable/ic_action_accounts"
        android:title="@string/open_with_account"/>
    <item
        android:id="@id/open_in_browser"
        android:icon="@drawable/ic_action_web"
        android:title="@string/action_open_in_browser"/>
    <item
        android:id="@+id/add_to_home_screen_submenu"
        android:icon="@drawable/ic_action_home"
        android:title="@string/action_add_to_home_screen_more">
        <menu>
            <item
                android:id="@+id/add_user_to_home_screen"
                android:icon="@drawable/ic_action_user"
                android:title="@string/title_user"/>
            <item
                android:id="@+id/add_statuses_to_home_screen"
                android:icon="@drawable/ic_action_quote"
                android:title="@string/title_statuses"/>
            <item
                android:id="@+id/add_media_to_home_screen"
                android:enabled="@bool/debug"
                android:icon="@drawable/ic_action_gallery"
                android:title="@string/title_media_timeline"
                android:visible="@bool/debug"/>
            <item
                android:id="@+id/add_favorites_to_home_screen"
                android:icon="@drawable/ic_action_star"
                android:title="@string/title_favorites"/>
        </menu>
    </item>
</menu>