<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:title="@string/notifications">

    <de.vanita5.twittnuker.preference.NotificationAccountsListPreference
        android:key="cat_accounts"
        android:title="@string/accounts"
        app:switchDefault="true"
        app:switchKey="notification"/>

    <PreferenceCategory
        android:key="cat_general"
        android:title="@string/general">
        <de.vanita5.twittnuker.preference.SilentNotificationsPreference
            android:key="silent_notifications"
            android:summary="@string/silent_notifications_summary"
            android:title="@string/silent_notifications"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="cat_notifications"
        android:title="@string/notifications">

        <de.vanita5.twittnuker.preference.AutoFixCheckBoxPreference
            android:defaultValue="true"
            android:key="stream_notifications"
            android:summary="@string/stream_notifications_summary"
            android:title="@string/stream_notifications"/>

        <de.vanita5.twittnuker.preference.AutoFixCheckBoxPreference
            android:defaultValue="true"
            android:key="combined_notifications"
            android:summaryOff="@string/combined_notifications_summary_off"
            android:summaryOn="@string/combined_notifications_summary_on"
            android:title="@string/combined_notifications" />

        <de.vanita5.twittnuker.preference.AutoFixCheckBoxPreference
            android:defaultValue="false"
            android:key="pebble_notifications"
            android:dependency="stream_notifications"
            android:summary="@string/pebble_notifications_summary"
            android:title="@string/pebble_notifications"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="cat_push"
        android:title="@string/push_notifications">

        <de.vanita5.twittnuker.preference.SummaryEditTextPreference
            android:dialogTitle="@string/push_api_url"
            android:key="push_api_url"
            android:singleLine="true"
            android:summary="@string/push_api_url_summary"
            android:title="@string/push_api_url"/>

        <de.vanita5.twittnuker.preference.SummaryEditTextPreference
            android:dialogTitle="@string/push_api_port"
            android:key="push_api_port"
            android:inputType="number"
            android:singleLine="true"
            android:summary="@string/push_api_port_summary"
            android:title="@string/push_api_port"/>

        <!-- TODO Add Info/Help -->
    </PreferenceCategory>

</PreferenceScreen>