<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
	android:title="@string/theme">

	<PreferenceCategory
		android:key="cat_theme_preview"
        android:order="11"
        android:title="@string/preview">
		<de.vanita5.twittnuker.preference.ThemePreviewPreference
            android:key="theme_preview"/>
	</PreferenceCategory>

	<de.vanita5.twittnuker.preference.DarkLightThemeTogglePreference
        android:order="21"
		android:key="theme"
        android:title="@string/dark_theme">
        <extra
            android:name="notify_change"
            android:value="true" />
    </de.vanita5.twittnuker.preference.DarkLightThemeTogglePreference>

    <de.vanita5.twittnuker.preference.ColorPickerPreference
        android:key="theme_color"
        android:order="22"
        android:title="@string/theme_color"
        app:defaultColor="@color/branding_color">
        <extra
            android:name="notify_change"
            android:value="true" />
    </de.vanita5.twittnuker.preference.ColorPickerPreference>

    <de.vanita5.twittnuker.preference.ColorPickerPreference
        android:defaultValue="@color/twittnuker_material_dark"
        android:key="action_bar_color"
        android:order="23"
        android:title="@string/action_bar_color">
        <extra
            android:name="notify_change"
            android:value="true" />
    </de.vanita5.twittnuker.preference.ColorPickerPreference>

    <de.vanita5.twittnuker.preference.ThemeBackgroundPreference
		android:defaultValue="default"
        android:order="25"
        android:title="@string/background">
        <extra
            android:name="notify_change"
            android:value="true" />
    </de.vanita5.twittnuker.preference.ThemeBackgroundPreference>

</PreferenceScreen>